--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@playwright/test": "^1.21.0",
-    "@sveltejs/adapter-auto": "^1.0.0-next.34",
-    "@sveltejs/kit": "^1.0.0-next.312",
-    "@types/cookie": "^0.5.0",
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
-    "autoprefixer": "^10.4.4",
-    "eslint": "^8.13.0",
+    "@playwright/test": "^1.21.1",
+    "@sveltejs/adapter-auto": "^1.0.0-next.40",
+    "@sveltejs/kit": "^1.0.0-next.323",
+    "@types/cookie": "^0.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "autoprefixer": "^10.4.5",
+    "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^3.4.1",
     "postcss": "^8.4.12",
@@ -30,13 +30,17 @@
     "svelte": "^3.47.0",
     "svelte-preprocess": "^4.10.6",
     "tailwindcss": "^3.0.24",
-    "tslib": "^2.3.1",
+    "tslib": "^2.4.0",
     "typescript": "~4.6.3"
   },
   "type": "module",
   "dependencies": {
-    "@fontsource/fira-mono": "^4.5.7",
+    "@fontsource/fira-mono": "^4.5.8",
     "@lukeed/uuid": "^2.0.0",
-    "cookie": "^0.5.0"
+    "cookie": "^0.5.0",
+    "jose": "^4.8.0",
+    "mongoose": "^6.3.1",
+    "passport": "^0.5.2",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
